--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,7 @@
                 "--duration=3600.0",
                 "--distance-miles=\"8.0\"",
                 "--date=2009-05-25",
+                "--notes=somenotes",
                 "--preview"
             ]
         }
